kong_argocd_repo/ingress/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: kong
  annotations:
    kubernetes.io/ingress.global-static-ip-name: kong-static-ip
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - argocd.tg-backend.com
    secretName: kong-tls  # cert-manager generates this
  rules:
  - host: argocd.tg-backend.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kong-proxy
            port:
              number: 80
